phpMyAdmin - ChangeLog
----------------------

$Id$
$HeadURL: https://phpmyadmin.svn.sourceforge.net/svnroot/phpmyadmin/trunk/phpMyAdmin/ChangeLog $

3.3.0.0 (not yet released)
+ patch #2794819 [navi] Filter for displayed table names,
  thanks to Michael Valushko - dylfin
- bug #2794840 [core] Cannot redeclare pma_tableheader() 
- rfe #2726479 [core] configurable maximal length of URL

3.2.1.0 (not yet released)
- bug #2799009 Login with ipv6 IP address breaks redirect
- bug #2796066 [priv] Inconsistent display of databases list

3.2.0.0 (not yet released)
- [core] better support for vendor customisation (based on what Debian needs)
+ rfe #2127987 warn when session.gc_maxlifetime is less than cookie validity
+ rfe #2100910 configurable default charset for import
+ rfe #1913541 link to InnoDB status when error 1005 occurs
+ rfe #1927189 strip ` from column names on import
+ rfe #1821619 LeftFrameDBSeparator can be an array
+ patch #1821619 [privileges] Extra back reference when editing table-specific
  privileges, thanks to Herman van Rink - helmo
+ patch #2356575 [display] Sortable database columns,
  thanks to Bryce Thornton - brycethornton
- patch #2486825 [lang] Wrong string in setup script hints,
  thanks to Isaac Bennetch - ibennetch
- patch #2498350 [cleanup] XHTML cleanup, thanks to Virsacer - virsacer 
+ patch #2494192 [display] Possibility of disabling the sliders, 
  thanks to Virsacer - virsacer 
+ patch #2506831 [privileges] Create user for existing database, 
  thanks to Herman van Rink and Virsacer
+ patch #2505255 [privileges] Cleanup, thanks to Virsacer - virsacer
- bug #2414056 [auth] AllowNoPasswordRoot error message is too vague 
- patch #2596230 [XHTML] View table headers/footers completely,
  thanks to Virsacer - virsacer
- patch #2602633 [core] support column name having square brackets, 
  thanks to Herman van Rink - helmo
+ [lang] Lithuanian update, thanks to Rytis Slatkevicius - rytis_s 