@@ -10,6 +10,8 @@ $HeadURL: https://phpmyadmin.svn.sourceforge.net/svnroot/phpmyadmin/trunk/phpMyA
   thanks to Michael Valushko - dylfin
 - bug #2794840 [core] Cannot redeclare pma_tableheader() 
 - rfe #2726479 [core] configurable maximal length of URL
++ patch #2724755 [display] Full/partial text links (big T) are back,
+  thanks to nullbarriere - nullbarriere 
 
 3.2.1.0 (not yet released)
 - bug #2799009 Login with ipv6 IP address breaks redirect
